<resources>

    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="stop">Stop</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
	<string name="app_name">Baby Sleep Buzzer</string>
	<string name="countdown">seconds remaining: </string>
	<string name="menu_settings">Settings</string>
	<string name="menu_record">Record own voice</string>
	<string name="menu_exit">Exit</string>
	<string name="pref_settings">Settings</string>
	<string name="pref_useOwnVoice">Use own voice</string>
	<string name="pref_useOwnVoice_Summary">Own voice</string>
	<string name="stop_playing">Stop playing</string>
	<string name="start_playing">Start playing</string>
	<string name="stop_recording">Stop recordingn</string>
	<string name="start_recording">Start recording</string>
	<string name="vibration">Vibration</string>
	<string name="own_voice">Own voice</string>
	<string name="error_own_voice">Error recording own voice</string>
	<string name="good_night">Good night</string>
	<string name="plus">+</string>
	<string name="minus">-</string>
</resources>