<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
    	android:layout_height="match_parent">    
        
    
    <PreferenceCategory
        android:title="@string/pref_settings"
        android:background="?android:attr/selectableItemBackground"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:animateLayoutChanges="true">
        
        
        
        
        <CheckBoxPreference
            android:key="pref_useOwnVoice"
            android:title="@string/pref_useOwnVoice"
            android:summary="@string/pref_useOwnVoice_Summary"
	        android:background="?android:attr/selectableItemBackground"
            android:checked="false">
        </CheckBoxPreference>
        
        
    </PreferenceCategory>
    

</PreferenceScreen>