<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    
    <LinearLayout 
	    android:id="@+id/mainLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:background="#000000"
	    android:animateLayoutChanges="true"
	    tools:context=".MainActivity"
	    android:focusable="true"
	    android:focusableInTouchMode="true"
	    android:layout_gravity="center_vertical|center_horizontal"
	    android:orientation="vertical">
    

	    <DigitalClock 
	        android:id="@+id/digitalClock1"
	        android:layout_width="wrap_content"
	        android:textColor="#FFFFFF"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"/>
	    
	    <TextView 
	        android:id="@+id/countdown"
	        android:textColor="#FFFFFF"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"/>
	    
	    <LinearLayout 
	        android:id="@+id/timeButtons"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:orientation="horizontal"
	        android:layout_gravity="center_horizontal">
	        
	            <de.sms.android.babyschlafvibrator.countdown.CountdownPicker
	                android:id="@+id/hour_picker"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" >
	            </de.sms.android.babyschlafvibrator.countdown.CountdownPicker>
	
	            <de.sms.android.babyschlafvibrator.countdown.CountdownPicker
	                android:id="@+id/minute_picker"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" >
	            </de.sms.android.babyschlafvibrator.countdown.CountdownPicker>
	
	            <de.sms.android.babyschlafvibrator.countdown.CountdownPicker
	                android:id="@+id/second_picker"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" >
	            </de.sms.android.babyschlafvibrator.countdown.CountdownPicker>
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/bottomButtons"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:orientation="horizontal" 
	        android:layout_gravity="center_horizontal">
	                    
	        <Button
	            android:id="@+id/startButton"
	            android:layout_height="wrap_content"
	      	    android:layout_width="wrap_content" 
	      	    android:textColor="#FFFFFF"
	      	    android:background="?android:attr/selectableItemBackground"
	      	    android:text="@string/start"/>
	            
	        <Button
	            android:id="@+id/stopButton"
	            android:layout_height="wrap_content"
	      	    android:layout_width="wrap_content" 
	      	    android:textColor="#FFFFFF"
	      	    android:background="?android:attr/selectableItemBackground"
	      	    android:text="@string/stop"/>
	        
	        <Button
	            android:id="@+id/exitButton"
	            android:layout_height="match_parent"
	      	    android:layout_width="match_parent" 
	      	    android:textColor="#FFFFFF"
	      	    android:background="?android:attr/selectableItemBackground"
	      	    android:text="@string/exit"/>
	        
	    </LinearLayout>
	    
	    <ProgressBar 
	        android:id="@+id/progress"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:indeterminate="false"
	        android:max="100"
	        android:minHeight="50dp"
	        android:minWidth="200dp"
	        android:progress="100" 
	        android:animateLayoutChanges="true"
	        style="@android:style/Widget.ProgressBar.Horizontal" 
	        android:layout_gravity="center_horizontal"/>
	    
	    <LinearLayout 
	        android:id="@+id/addLayout"
	        android:layout_height="fill_parent"
	        android:layout_width="fill_parent"
	        android:orientation="horizontal"
	        android:layout_gravity="center_horizontal" />
	    
	</LinearLayout>

	
</ScrollView>